Prevented floating side navbar text from wrapping since its jarring

--- a/sidenav.css
+++ b/sidenav.css
@@ -1,3 +1,7 @@
+#sidenav ul {
+  white-space: nowrap;
+}
+
 #sidenav li.active a:not(.text-muted){
   font-weight: bold;
 }
